@@ -705,3 +705,4 @@ table.insert(tests, "ls_unknown_in_subdir")
 table.insert(tests, "test_a_merge_8")
 table.insert(tests, "magic__MTN_in_restrictions")
 table.insert(tests, "db_kill_rev_and_recommit")
+table.insert(tests, "pluck_clobbers_workspace")
